<resources>
    <string name="app_name">民宿</string>
    <string name="title_explore">探索</string>
    <string name="title_wish">心愿单</string>
    <string name="title_story">故事</string>
    <string name="title_mails">收件箱</string>
    <string name="title_login">登录</string>

    <string name="price_news_model">￥$</string>
    <string name="css_goods">
        html,body,p{
            padding:0px;
            margin:0px;
            text-align:center;
        }
        img{
            width:100%;
            top:0;
            bottom:0;
            left:0;
            right:0;
            margin:auto;
        }
    </string>
</resources>
